# PMET_dev

./: .gitignore  00_binary_compile.sh  01_CPP_debug_pmetindex.sh  01_CPP_debug_pmetindex_intervals.sh  01_CPP_debug_pmetindex_promoters.sh  01_PMET_promoter.sh  01_homotpic_intervals.sh  01_homotpic_promoters.sh  01_homotypic_intervals.sh  01_homotypic_mRNA.sh  01_homotypic_promoters.sh  01_homotypic_promoters_with_distance_to_tss.sh  01_pmet_genomic_element.sh  01_pmet_mRNA.sh  01_pmetindex_debug.sh  02_CPP_debug_pmet_debug.sh  02_CPP_debug_pmet_intervals_parallel.sh  02_CPP_debug_pmet_parallel.sh  02_CPP_debug_pmet_promoters.sh  02_CPP_debug_pmet_promoters_parallel.sh  02_PMET_intervals.sh  02_heterotypic_intervals.sh  02_heterotypic_mRNA.sh  02_heterotypic_promoters.sh  02_heterotypic_promoters_single_CPU.sh  03_PMET_genomic_all_element_isoforms.sh  03_PMET_genomic_element.sh  03_PMET_genomic_element_longest_isoform.sh  03_PMET_genomic_merged_element_isoforms.sh  03_test_new_fimo.sh  04_FIMO_old_and_new.sh  04_new_fimo_vs_old_fimo_plus_index.sh  05_heatmap.R  06_PMET_promoter_benchmark_parameters.sh  06_PMETindex_promoter_benchmark_parameters.sh  07_PMET_promoters_distance_to_tss.sh  07_pmet_genomic_element.sh  08_heterotypic_promoters_single_CPU.sh  PMETindex_genome_intervals.sh  PMETindex_promoters.sh  (+5 more)
src/pmet/: CMakeLists.txt  Output.cpp  Output.hpp  build.sh  main.cpp  motif.cpp  motif.hpp  motifComparison.cpp  motifComparison.hpp  run.sh  utils.cpp
src/pmetParallel/: CMakeLists.txt  Output.cpp  Output.hpp  build.sh  main.cpp  motif.cpp  motif.hpp  motifComparison.cpp  motifComparison.hpp  run.sh  utils.cpp
src/pmetParallel/test_data/: IC.txt  binomial_thresholds.txt  gene.txt  promoter_lengths.txt  universe.txt
(+989 files in other folders)
