## $Id: Makefile.am 1421 2006-11-01 01:15:40Z cegrant $
##
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies

DATAFILES = \
	all-A.fasta \
	one-peak-dna.fasta \
	one-peak-protein.fasta \
	README \
	one-peak-dna-revcomp.psp \
	one-peak-protein.psp

EXTRA_DIST = $(DATAFILES)
